--- a/src/components/StartingPage/StartingPage.css
+++ b/src/components/StartingPage/StartingPage.css
@@ -2,9 +2,10 @@
   background-image: url('../../images/Rectangle\ 2.1.png');
   background-repeat: no-repeat;
   background-size: contain;
-  
+  background-position: center;
+  max-width: 300px;
+  margin: 0 auto;
   padding: 60px 50px;
- 
 }
 
 .startingPage__title {
@@ -33,7 +34,7 @@
 .startingPage__list-item {
   padding: 10px;
   background-color: #221738;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-radius: 10px;
   text-align: center;
   border: 1px solid transparent;
