created shared block InfoBlock

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,4 @@
 @import url('./components/Events/Events.css');
 @import url('./components/Illness/Illness.css');
 @import url('./shared/SubmitButton/SubmitButton.css');
+@import url('./shared/InfoBlock/InfoBlock.css');
